--- a/app/index.html
+++ b/app/index.html
@@ -199,25 +199,125 @@
     <h2>Готовые варианты для Вас</h2>
   </div>
 
-  <ul class="tabs__caption">
-    <li>Спальня</li>
-    <li class="active">Гостинная</li>
-    <li>Прихожая</li>
-    <li>Кабинет</li>
-    <li>Детская</li>
-    <li>Столовая</li>
-  </ul>
+  <div class="tabs">
+    <ul class="tabs__caption">
+      <li>Спальня</li>
+      <li class="active">Гостинная</li>
+      <li>Прихожая</li>
+      <li>Кабинет</li>
+      <li>Детская</li>
+      <li>Столовая</li>
+    </ul>
 
-  <div class="tabs__content">
-  <div class="category-slider">
-    <div class="slide"><div class="category-slider-item"><img src="img/category1.jpg" alt=""></div></div>
-    <div class="slide"><div class="category-slider-item"><img src="img/category2.jpg" alt=""></div></div>
-    <div class="slide"><div class="category-slider-item"><img src="img/category3.jpg" alt=""></div></div>
-    <div class="slide"><div class="category-slider-item"><img src="img/category2.jpg" alt=""></div></div>
-  </div>
-  <div class="category-slider__nav"></div>
-  </div>
+    <div class="tabs__content">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
 
+    <div class="tabs__content active">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
+
+    <div class="tabs__content">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
+
+    <div class="tabs__content">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
+    <div class="tabs__content">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
+    <div class="tabs__content">
+      <div class="category-slider">
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category1.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category3.jpg" alt=""></div>
+        </div>
+        <div class="slide">
+          <div class="category-slider-item"><img src="img/category2.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="category-slider__nav"></div>
+    </div>
+  </div>
 </section>
 <!--секция варианты-->
 
